--- a/app/src/main/res/layout/fragment_create_task.xml
+++ b/app/src/main/res/layout/fragment_create_task.xml
@@ -68,7 +68,7 @@
         android:drawableEnd="@drawable/ic_arrow_down"
         android:drawablePadding="8dp"
         android:padding="10dp"
-        android:text="Every week  "
+        android:text="@string/every_week"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,9 +78,9 @@
         android:id="@+id/apply_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:text="Add new task"
-        android:textSize="18sp"
+        android:layout_marginTop="@dimen/default_top_margin"
+        android:text="@string/add_new_task"
+        android:textSize="@dimen/bid_text_size"
         android:textAllCaps="false"
         android:background="@drawable/rectangle_button_background"
         app:layout_constraintTop_toBottomOf="@id/choose_date_tv" />
